# serde_arrow

./: .gitignore  LICENSE  NOTICE  README.md  Roadmap.org  rebar.config
guides/: quick-run-through.livemd
native/arrow_format_nif/: Cargo.toml  README.md
native/arrow_format_nif/src/: file.rs  lib.rs  message.rs  utils.rs
native/arrow_format_nif/src/message/: header.rs  record_batch.rs  schema.rs
native/arrow_format_nif/src/message/schema/: field.rs  types.rs
src/: arrow.app.src  arrow.erl  arrow_array.erl  arrow_array.hrl  arrow_bitmap.erl  arrow_buffer.erl  arrow_buffer.hrl  arrow_fixed_list_array.erl  arrow_fixed_primitive_array.erl  arrow_format_nif.erl  arrow_ipc_field.erl  arrow_ipc_field.hrl  arrow_ipc_file.erl  arrow_ipc_file.hrl  arrow_ipc_message.erl  arrow_ipc_message.hrl  arrow_ipc_record_batch.erl  arrow_ipc_record_batch.hrl  arrow_ipc_schema.erl  arrow_ipc_schema.hrl  arrow_ipc_type.erl  arrow_offsets.erl  arrow_type.erl  arrow_utils.erl  arrow_variable_binary_array.erl  arrow_variable_list_array.erl  cargo.hrl  serde_arrow.app.src  serde_arrow.erl  serde_arrow_array.erl  serde_arrow_array.hrl  serde_arrow_array_utils.erl  serde_arrow_binary_array.erl  serde_arrow_bitmap.erl  serde_arrow_buffer.erl  serde_arrow_buffer.hrl  serde_arrow_fixed_list_array.erl  serde_arrow_fixed_primitive_array.erl  serde_arrow_ipc_field.erl  serde_arrow_ipc_field.hrl  (+18 more)
test/: arrow_array_SUITE.erl  arrow_bitmap_SUITE.erl  arrow_buffer_SUITE.erl  arrow_fixed_list_array_SUITE.erl  arrow_fixed_primitive_array_SUITE.erl  arrow_format_nif_SUITE.erl  arrow_ipc_field_SUITE.erl  (+33 more)
(+4 files in other folders)
