[package]
name = "arrow_format_nif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arrow_format_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
arrow-format = { version = "0.8", features = ["ipc"] }
rustler = "0.30.0"
